# at3_group_9_streamlit

./: README.md  pyproject.toml
data/: table.csv
models/: dt_regressor.joblib  lr_model.joblib
streamlit/: app.py
